--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "练-nest-server",
+  "name": "nest-server",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,6 +25,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -42,7 +44,9 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "mysql2": "^3.6.5",
     "prettier": "^3.0.0",
+    "sequelize": "^6.35.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
