--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "snowflake-id": "^1.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
