--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
