--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "databaseModel": " sequelize-auto -h localhost -d report_database -u root -x 123456789 -l ts -o src/dao --caseModel p --noInitModels "
+    "initModel": "sequelize-auto -h localhost -d report_database -u root -x 123456789 -l ts -o src/dao --caseModel --caseFile p"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
