--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "initModel": "sequelize-auto -h localhost -d report_database -u root -x 123456789 -l ts -o src/dao --caseModel --caseFile p"
+    "initModel": "sequelize-auto -h localhost -d report_database -u root -x 123456789 -l ts -o src/dao --caseModel p --caseProp c --caseFile p"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -26,10 +26,12 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.16",
+    "base62-ts": "^1.3.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sequelize-auto": "^0.8.8",
