--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.1",
     "@nestjs/swagger": "^7.1.16",
+    "@nestjs/websockets": "^10.4.1",
     "base62-ts": "^1.3.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
