--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "nest build ",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nvm use 16 & cross-env NODE_ENV=development nest start --watch",
@@ -21,7 +21,9 @@
     "initModel": "sequelize-auto -h localhost -d report_database -u root -x 123456789 -l ts -o src/dao --caseModel p --caseProp c --caseFile p"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.1.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
@@ -31,6 +33,7 @@
     "base62-ts": "^1.3.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.4.7",
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
