--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sequelize-auto": "^0.8.8",
+    "sequelize-typescript": "^2.1.6",
     "snowflake-id": "^1.1.0"
   },
   "devDependencies": {
